--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,16 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost/device
+  mvc:
+    favicon:
+      enabled: false
 
 logging:
   file: ./logs/device_server.log
 
 config:
   corporateId: 305f55e28c334b958777f9c037a02cd9
-  corporatePassword: 1q2w3e4r
+  corporatePasswd: 1q2w3e4r
   intervalInMs: 180000
   testSn:
   - '001221A00B39'
