--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation "org.aspectj:aspectjweaver"
     compileOnly "org.springframework.boot:spring-boot-configuration-processor"
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
