--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.aspectj:aspectjweaver"
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+    implementation "org.apache.poi:poi:4.1.2"
     compileOnly "org.springframework.boot:spring-boot-configuration-processor"
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
